<resources>
    <string name="app_name">CookingRecipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="floating_action_button">floating action button</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="finger_food">Finger Food</string>
    <string name="marinade">Marinade</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="bottom_sheet_apply_btn">Apply</string>
    <string name="search_menu">Search</string>
    <string name="reload_screen">Reload</string>
    <string name="share_joke">Share</string>
    <string name="diary_free">Diary Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="no_favorite_recipe">No Favorite Recipe</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>