<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    app:layoutDescription="@xml/fragment_recipe_details_scene"
    tools:context=".ui.fragment.detailScreen.RecipeDetailsFragment">


    <ImageView
        android:id="@+id/iv_recipe_picture"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_picture"
        app:layout_constraintEnd_toEndOf="@+id/iv_recipe_picture"
        app:layout_constraintStart_toStartOf="@+id/iv_recipe_picture"
        app:layout_constraintTop_toTopOf="@+id/iv_recipe_picture"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_picture"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintStart_toStartOf="@+id/tv_time"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintEnd_toStartOf="@+id/tv_time" />

    <ImageView
        android:id="@+id/iv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@+id/tv_likes"
        app:layout_constraintEnd_toEndOf="@+id/tv_likes"
        app:layout_constraintStart_toStartOf="@+id/tv_likes"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/titleColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_recipe_picture" />

    <ImageView
        android:id="@+id/iv_check_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/tv_recipe_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/tv_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/iv_check_vegetarian"
        app:layout_constraintStart_toEndOf="@+id/iv_check_vegetarian"
        app:layout_constraintTop_toTopOf="@+id/iv_check_vegetarian" />

    <ImageView
        android:id="@+id/iv_check_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/iv_check_vegetarian"
        app:layout_constraintTop_toBottomOf="@+id/iv_check_vegetarian"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/tv_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/iv_check_vegan"
        app:layout_constraintStart_toEndOf="@+id/iv_check_vegan"
        app:layout_constraintTop_toTopOf="@+id/iv_check_vegan" />

    <ImageView
        android:id="@+id/iv_check_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_vegetarian"
        app:layout_constraintStart_toEndOf="@+id/tv_vegetarian"
        app:layout_constraintTop_toTopOf="@+id/tv_vegetarian"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/tv_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/iv_check_gluten_free"
        app:layout_constraintStart_toEndOf="@+id/iv_check_gluten_free"
        app:layout_constraintTop_toTopOf="@+id/iv_check_gluten_free" />

    <ImageView
        android:id="@+id/iv_check_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/iv_check_gluten_free"
        app:layout_constraintTop_toBottomOf="@+id/iv_check_gluten_free"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/tv_diary_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/diary_free"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/iv_check_dairy_free"
        app:layout_constraintStart_toEndOf="@+id/iv_check_dairy_free"
        app:layout_constraintTop_toTopOf="@+id/iv_check_dairy_free" />

    <ImageView
        android:id="@+id/iv_check_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gluten_free"
        app:layout_constraintStart_toEndOf="@+id/tv_gluten_free"
        app:layout_constraintTop_toTopOf="@+id/tv_gluten_free"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/tv_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/iv_check_healthy"
        app:layout_constraintStart_toEndOf="@+id/iv_check_healthy"
        app:layout_constraintTop_toTopOf="@+id/iv_check_healthy" />

    <ImageView
        android:id="@+id/iv_check_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/iv_check_healthy"
        app:layout_constraintTop_toBottomOf="@+id/iv_check_healthy"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/tv_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/iv_check_cheap"
        app:layout_constraintStart_toEndOf="@+id/iv_check_cheap"
        app:layout_constraintTop_toTopOf="@+id/iv_check_cheap" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_check_vegan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>